--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.16.4",
     "date-fns": "^3.6.0",
     "react": "^18.3.0",
     "react-date-range": "^2.0.1",
