--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car-rental",
+  "name": "talrens",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.16.4",
-    "date-fns": "^3.6.0",
-    "react": "^18.3.0",
-    "react-date-range": "^2.0.1",
-    "react-dom": "^18.2.0"
+    "antd": "^5.16.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.23.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
