--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "antd": "^5.16.5",
+    "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
