--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.16.5",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
