--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "antd": "^5.16.5",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.9",
